lessons7/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lessons7-deployment
  labels:
    app: lessons7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lessons7
  template:
    metadata:
      labels:
        app: lessons7
    spec:
      containers:
        - name: lessons7
          image: alexdolg/otus:lesson7-otus
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: lessons7-cm
            items:
              - key: application.yml
                path: application.yml
