lessons7/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lessons7-service
spec:
  selector:
    app: lessons7
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
